[gd_scene load_steps=2 format=3 uid="uid://q3fi0yfwyrti"]

[ext_resource type="Script" path="res://scripts/day_end_screen.gd" id="1_foldo"]

[node name="DayEndScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_foldo")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -39.0
offset_right = 39.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 500
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 500

[node name="DayNumber" type="Label" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Day 2 Completed"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 250
theme_override_constants/margin_right = 250

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -69.5
offset_right = 192.0
offset_bottom = 69.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 200

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 35

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Customers Served"

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Tricks Done"

[node name="Label3" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Money Earned"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 35

[node name="CustomersServed" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "3/20"

[node name="TricksDone" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "81"

[node name="MoneyEarned" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "$2.87"

[node name="VBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -181.5
offset_top = 123.0
offset_right = 181.5
offset_bottom = 174.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 150
metadata/_edit_group_ = true

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="UpgradeShop" type="Button" parent="VBoxContainer2/MarginContainer"]
layout_mode = 2
text = "Upgrade Shop"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="MainMenu" type="Button" parent="VBoxContainer2/MarginContainer2"]
layout_mode = 2
text = "Main Menu"

[node name="VBoxContainer3" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.5
offset_top = 194.0
offset_right = 60.5
offset_bottom = 243.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 150
metadata/_edit_group_ = true

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer3"]
layout_mode = 2

[node name="NextDay" type="Button" parent="VBoxContainer3/MarginContainer"]
layout_mode = 2
text = "Start Next Day"

[connection signal="pressed" from="VBoxContainer2/MarginContainer/UpgradeShop" to="." method="_on_upgrade_shop_pressed"]
[connection signal="pressed" from="VBoxContainer2/MarginContainer2/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="VBoxContainer3/MarginContainer/NextDay" to="." method="_on_next_day_pressed"]
